2005-07-23  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (*print-base*, *print-radix*,
	*print-right-margin*, *print-miser-width*): New fluid variables.

	* kawa/GuiConsole.java (<init>): New shared parameter.
	Use to call InheritingEnvironment's setIndirectDefines.
	(actionPerformed): Update for modified Environment inheritance.

	* kawa/standard/TracedProcedure.java (applyN): setWithSave and
	setRestore now require an extra CallContext parameter.

2005-07-21  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (<init>): Default constructor now calls
	geNewEnvironment, to match old documentation/advice.
	Also sets the environ field.
	New non-default constructor called from clinit.

	* kawa/repl.java (propertyFields): New static table.
	(processArgs): Process arguments of the form 'NAME=VALUE'.

2005-07-20  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run): Set and restore default Language.

	* kawa/standard/Scheme.java (r4Environment, r5Environment,
	kawaEnvironment): Make final, and allocate in static block.

2005-06-29  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (numEqu, numGrt, numGEq, numLss, numLEq):
	New static fields for the numeric compare functions.
	(initScheme): Re-define numeric comparisions using new fields.

2005-06-27  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (checkMemberContext): New method.
	(rewrite): Call checkMemberContext.
	* kawa/standard/set_b.java (rewriteFrom): Set context Declaration.
	Fixes Savannah bug #4881.

2005-06-26  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (processAccesses): Call new capture method
	in LambdaExp to force field to get allocated.
	* kawa/standard/syntax_case.java (rewriteClauses): Handle SyntaxForm
	in input form.

	* kawa/lang/SyntaxTemplate.java (convert_template): Convert '(... ...)'
	to '...' as in other syntax-case implementations.

2005-06-04  Per Bothner  <per@bothner.com>
